--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-
-    "scss": "sass --watch ./styles/bundler.scss:./src/index.css",
-    "start": "concurrently -k \"npm run dev\" \"npm run scss\"",
-    
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -24,6 +21,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "sass": "^1.77.8",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
