--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "isolatedModules": true,
+    "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
 
-    "baseUrl": ".",
-    "paths": {
-      "game/*": ["./src/game/*"],
-      "lib/*": ["./src/lib/*"],
-      "store/*": ["./src/store/*"],
-      "components/*": ["./src/components/*"],
-      "imgs/*": ["./src/assets/imgs/*"],
-    }
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "./src",
   },
   "include": ["src", "src/store/game/.slice.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
